# clr_sim_demos

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
clr_pick_and_place_demo/: README.md  package.xml
clr_pick_and_place_demo/config/: waypoints.yaml
clr_pick_and_place_demo/launch/: demo.launch.py  demo_planning_viz.launch.py
clr_pick_and_place_demo/src/: run_demo.cpp
config/: waypoints.yaml
launch/: demo.launch.py  demo_planning_viz.launch.py
rviz/: demo_config.rviz
src/: run_demo.cpp
