<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clr_dynamic_sim_demo</name>
  <version>0.0.1</version>
  <description>Application demonstration of the CLR robot operating in its dynamic simulation</description>
  <maintainer email="nikki.j.hart@nasa.gov">njhart</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dex_ivr_helpers</depend>
  <depend>dex_ivr_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>color_blob_centroid</exec_depend>
  <exec_depend>clr_imetro_environments</exec_depend>
  <exec_depend>clr_moveit_config</exec_depend>
  <exec_depend>hatch_4040</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>trainer</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
